prototypes/keycloak/ytt/ingressroute-keycloak.yaml
#@ load("@ytt:data", "data")
#@ domain = data.values.shared.domain
#@ frontend = "auth." + domain
#@ admin =  "keycloak." + domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: keycloak
spec:
  entryPoints:
    - websecure
    - websecure-http3
  routes:
    - kind: Rule
      match: #@ "Host(`{}`)".format(frontend)
      priority: 10
      services:
        - name: keycloak-service
          port: 8080
          passHostHeader: true
    - kind: Rule
      match: #@ "Host(`{}`)".format(admin)
      priority: 10
      services:
        - name: keycloak-service
          port: 8080
          passHostHeader: true
